--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,7 @@ jobs:
 
     test2:
         runs-on: ubuntu-latest
+        needs: test1
         steps:
           - name: echo2
             run: echo "Zdravo Svete!"
